Fixing styles and elements for correct spacing in header

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,13 +1,3 @@
-.header-inner-container {
-  height: 100%;
-  max-height: 1080px;
-  position: relative;
-  .header-logo {
-    position: absolute;
-    bottom: 150px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.header-logo {
+  padding-bottom: 20px;
 }
